/*
 * Copyright 2010-2015 JetBrains s.r.o.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.jetbrains.kotlin.serialization.java;

import "core/deserialization/src/descriptors.proto";

option java_outer_classname = "JavaClassProtoBuf";
option optimize_for = LITE_RUNTIME;

extend Function {
  optional bool is_static_method = 1000;
  optional bool is_package_private_method = 1001;
}

extend Property {
  optional bool is_static_field = 1000;
  optional bool is_package_private_field = 1001;
}

extend Class {
  optional bool is_package_private_class = 1000;
}

extend Constructor {
  optional bool is_package_private_constructor = 1000;
}
